integrated scrapers into cron

--- a/treestump/settings.py.template
+++ b/treestump/settings.py.template
@@ -17,3 +17,18 @@ FS_CLIENT_SECRET = ''
 # Patch
 PATCH_KEY = ''
 PATCH_SECRET = ''
+
+
+# Instagram
+INSTAGRAM_KEY = ''
+INSTAGRAM_SECRET = ''
+INSTAGRAM_ACCESS_TOKEN = ''
+
+
+# Yelp
+YELP_CONSUMER_KEY = ''
+YELP_CONSUMER_SECRET = ''
+YELP_TOKEN = ''
+YELP_TOKEN_SECRET = ''
+YELP_HOST = ''
+YELP_RESULTS_LIMIT = ''
